<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>SoftwareEng</groupId>
  <artifactId>FinalProj</artifactId>
  <version>1.0-SNAPSHOT</version>
  
  <packaging>jar</packaging>
  
  <properties>
  		<java.version>13</java.version>
  		<maven.compiler.source>${java.version}</maven.compiler.source>
  		<maven.compiler.target>${java.version}</maven.compiler.target>
  		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <build>
  	<plugins>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
  			<artifactId>maven-jar-plugin</artifactId>
  			<configuration>
  				<finalName>Iteration2</finalName>
  				<archive>
  					<manifest>
  						<mainClass>presentation.application.Application</mainClass>
  					</manifest>
  				</archive>
  				<descriptorRefs>
  					<descriptorRef>jar-with-dependencies</descriptorRef>
  				</descriptorRefs>
  				<appendAsemblyId>false</appendAsemblyId>
  			</configuration>
  		</plugin>
  	</plugins>
  </build>
  
</project>